# win-service-control-mcp

./: Cargo.toml  LICENSE  MCP开发分享.md
src/: logger.rs  main.rs  mcp_adapter.rs  mcp_adapter_process.rs  mcp_server.rs  process_handler.rs  service_handler.rs
