[package]
name = "win-service-control-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
# 命令行解析
clap = { version = "4.4", features = ["derive"] }
schemars = "1.2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
async-trait = "0.1"
# Windows API
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Services",
    "Win32_System_SystemServices",
    "Win32_Security",
] }
[[bin]]
name = "wsm"
path = "src/main.rs"
